PI-377 Publish case notes as domain events
This change is to publish case notes to the domain events topic, instead of offender events.  It uses a similar mechanism as released/received/merged, however it doesn't rely on the event being first published to the offender events topic.

I've also updated HmppsDomainEvent to be a normal class instead of a record, with additionalInformation as a Map.  This was to reduce the amount of nulls being passed around, which was starting to get unwieldy due to the increasing number of different formats for the AdditionalInformation record.  Happy to revert this bit back though if the old method is preferred.